added notifications, updated meteor and package versions, added app manifest (and images) and set up autonotify cron

--- a/client/addperson/addperson.html
+++ b/client/addperson/addperson.html
@@ -12,6 +12,11 @@
     </div>
     
     <div class="form-group">
+      <label>Phone Number</label>
+      <input class="form-control mobile" type="text" />
+    </div>
+    
+    <div class="form-group">
       <label>Photo url</label>
       <input class="form-control personImg" type="url" />
     </div>
