--- a/client/editperson/editperson.html
+++ b/client/editperson/editperson.html
@@ -12,6 +12,11 @@
         <label>Twitter Handle</label>
         <input class="form-control twitterHandle" type="text" value="{{ auth.twitter }}" />
       </div>
+      
+      <div class="form-group">
+        <label>Phone Number</label>
+        <input class="form-control mobile" type="text" value="{{ mobile }}" />
+      </div>
 
       <div class="editimg">
         <img src="{{ img }}" />
