--- a/client/layout.html
+++ b/client/layout.html
@@ -7,6 +7,10 @@
     <a href="/" class="logo"></a>
     <nav>
       {{#if currentUser }}
+      <a href="/" class="home">
+        <i class="fa fa-home"></i>
+        <span>Home</span>
+      </a>
       <a href="/addmeal" class="add-meal">
         <i class="fa fa-cutlery"></i>
         <span>Log a meal</span>
