--- a/client/home/home.html
+++ b/client/home/home.html
@@ -1,5 +1,5 @@
 <template name="home">
-  <h1 class="welcome">{{> today}}</h1>
+  <h1 class="welcome hidden-xs">{{> today}}</h1>
   {{> deck}}
   {{> rye }}
 </template>
