--- a/client/addmeal/addmeal.html
+++ b/client/addmeal/addmeal.html
@@ -12,19 +12,19 @@
       {{/each}}
     </div>
     <div class="form-group">
-      <label>What's for lunch?</label>
-      <input type="text" class="mealDish form-control" required='required'>
+      <label class="hidden-xs">What's for lunch?</label>
+      <input placeholder="What's for lunch?" type="text" class="mealDish form-control" required='required'>
     </div>
     <div class="form-group guests">
-      <label>Any guests?</label>
-      <input type="number" min="0" step="1" value="0" class="mealGuests form-control"/>
+      <label class="hidden-xs">Any guests?</label>
+      <input placeholder="Number of guests" type="number" min="0" step="1" class="mealGuests form-control"/>
     </div>
     <div class="form-group date">
-      <label>Date?</label>
-      <input type="date" class="mealDate form-control" value="{{todaysDate}}" required='required'/>
+      <label class="hidden-xs">Date?</label>
+      <input placeholder="Today's date" type="date" class="mealDate form-control" value="{{todaysDate}}" required='required'/>
     </div>
     <div class="form-group submit">
-      <button class="btn">Add</button>
+      <button class="btn" type="submit">Add</button>
     </div>
   </form>
 </template>
