--- a/client/home/home.html
+++ b/client/home/home.html
@@ -32,11 +32,7 @@
 <template name="card">
   <div class="card{{#if eating}} eating{{/if}} {{scoreSummary this}}" data-person-id="{{_id}}">
     <div class="label-top">
-      {{#if currentUser}}
-        <a class="btn-editperson" href="/editperson/{{ _id }}">{{name}}</a>
-      {{else}}
-        {{name}}
-      {{/if}}
+      {{name}}
       <span class="score">{{ score this }}</span>
     </div>
     {{> photoFrame this}}
@@ -68,8 +64,15 @@
         <span class="last-cooked">Last cooked {{fromNow lastCooked}}</span>
       {{/if}}
       {{#if currentUser}}
-        <a class="btn btn-edit-user" href="/editperson/{{ _id }}">Edit</a>
-        <a class="btn btn-make-chef" href="/addmeal?chef={{ _id }}">Cook</a>
+        <div class="card-buttons">
+          <a class="btn btn-edit-user" href="/editperson/{{ _id }}">Edit</a>
+          <a class="btn btn-make-chef" href="/addmeal?chef={{ _id }}">Cook</a>
+          {{#if equal status 'jail'}}
+            <a class="btn btn-on-the-rye" href="#">On the Rye</a>
+          {{else}}
+            <a class="btn btn-on-the-rye" href="#">Off the Rye</a>
+          {{/if}}
+        </div>
       {{/if}}
     </div>
   </div>
