--- a/client/home/home.html
+++ b/client/home/home.html
@@ -63,6 +63,9 @@
       {{#if lastCooked}}
         <span class="last-cooked">Last cooked {{fromNow lastCooked}}</span>
       {{/if}}
+      {{#if lastEaten}}
+        <span title="{{lastEaten}}">Last ate {{fromNow lastEaten}}</span>
+      {{/if}}
       {{#if currentUser}}
         <div class="card-buttons">
           <a class="btn btn-edit-user" href="/editperson/{{ _id }}">Edit</a>
