Sped up animation a bit, removed "on the rye" header if section is empty

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -19,6 +19,7 @@
 </template>
 
 <template name="rye">
+  {{#if mia}}
   <div class="row">
     <div class="rye drop">
       <h1>On the Rye</h1>
@@ -27,6 +28,7 @@
       {{/each}}
     </div>
   </div>
+  {{/if}}
 </template>
 
 <template name="card">
