Brought editmeal page in line with addmeal page

--- a/client/addmeal/addmeal.html
+++ b/client/addmeal/addmeal.html
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group date">
       <label class="hidden-xs">Date?</label>
-      <input placeholder="Today's date" type="date" class="mealDate form-control" value="{{todaysDate}}" required='required'/>
+      <input placeholder="Today's date" type="date" class="mealDate form-control" value="{{todaysISODate}}" required='required'/>
     </div>
     <div class="form-group submit">
       <button class="btn" type="submit">Add</button>
@@ -46,7 +46,7 @@
       <br>
       <div class="form-group date">
         <label for="mealDate">Date</label>
-        <input class="mealDate form-control" id="mealDate" type="date" value="{{todaysDate}}"/>
+        <input class="mealDate form-control" id="mealDate" type="date" value="{{todaysISODate}}"/>
       </div>
     </div>
   </div>
