--- a/client/editmeal/editmeal.html
+++ b/client/editmeal/editmeal.html
@@ -29,15 +29,15 @@
     </div>
     <div class="form-group">
       <label class="hidden-xs">What's for lunch?</label>
-      <input placeholder="What's for lunch?" type="text" class="mealDish form-control" value="{{meal.dish}}" required='required'>
+      <input placeholder="What's for lunch?" type="text" class="mealDish form-control placeholder-hidden-xs" value="{{meal.dish}}" required='required'>
     </div>
     <div class="form-group guests">
       <label class="hidden-xs">Any guests?</label>
-      <input placeholder="Number of guests" type="number" min="0" step="1" class="mealGuests form-control" value="{{meal.guests}}" />
+      <input placeholder="Number of guests" type="number" min="0" step="1" class="mealGuests form-control placeholder-hidden-xs" value="{{meal.guests}}" />
     </div>
     <div class="form-group date">
       <label class="hidden-xs">Date?</label>
-      <input placeholder="Today's date" type="date" class="mealDate form-control" value="{{meal.date}}" required='required'/>
+      <input placeholder="Today's date" type="date" class="mealDate form-control placeholder-hidden-xs" value="{{meal.date}}" required='required'/>
     </div>
     <div class="form-group submit">
       <button class="btn" type="submit">Save</button>
