--- a/client/editperson/editperson.html
+++ b/client/editperson/editperson.html
@@ -4,17 +4,17 @@
     <input class="personId" type="hidden" value="{{ _id }}" >
     <div class="form-group">
       <label class="hidden-xs">Name</label>
-      <input class="form-control personName" type="text" placeholder="Name" value="{{ name }}" required />
+      <input class="form-control placeholder-hidden-xs personName" type="text" placeholder="Name" value="{{ name }}" required />
     </div>
     
     <div class="form-group">
       <label class="hidden-xs">Twitter Handle</label>
-      <input class="form-control twitterHandle" type="text" placeholder="Twitter handle" value="{{ auth.twitter }}" />
+      <input class="form-control placeholder-hidden-xs twitterHandle" type="text" placeholder="Twitter handle" value="{{ auth.twitter }}" />
     </div>
     
     <div class="form-group">
       <label class="hidden-xs">Phone Number</label>
-      <input class="form-control mobile" type="text" placeholder="Mobile number" value="{{ mobile }}" />
+      <input class="form-control placeholder-hidden-xs mobile" type="text" placeholder="Mobile number" value="{{ mobile }}" />
     </div>
 
     <div class="editimg">
@@ -23,7 +23,7 @@
 
     <div class="form-group">
       <label class="hidden-xs">Photo url</label>
-      <input class="form-control personImg" type="url" placeholder="Photo URL" value="{{ img }}" />
+      <input class="form-control placeholder-hidden-xs personImg" type="url" placeholder="Photo URL" value="{{ img }}" />
     </div>
     <div class="form-group">
       <button class="btn" type="submit">Save</button>
