--- a/client/addmeal/addmeal.html
+++ b/client/addmeal/addmeal.html
@@ -7,21 +7,22 @@
           <div class="label-top">
             <span>{{name}}</span>
           </div>
+          <div class="eater-status"></div>
           {{> photoFrame this}}
         </div>
       {{/each}}
     </div>
     <div class="form-group">
       <label class="hidden-xs">What's for lunch?</label>
-      <input placeholder="What's for lunch?" type="text" class="mealDish form-control placeholder-hidden-xs" required='required'>
+      <input placeholder="What's for lunch?" type="text" class="mealDish form-control placeholder-visible-xs" required='required'>
     </div>
     <div class="form-group guests">
       <label class="hidden-xs">Any guests?</label>
-      <input placeholder="Number of guests" type="number" min="0" step="1" class="mealGuests form-control placeholder-hidden-xs"/>
+      <input placeholder="Number of guests" type="number" min="0" step="1" class="mealGuests form-control placeholder-visible-xs"/>
     </div>
     <div class="form-group date">
       <label class="hidden-xs">Date?</label>
-      <input placeholder="Today's date" type="date" class="mealDate form-control placeholder-hidden-xs" value="{{todaysISODate}}" required='required'/>
+      <input placeholder="Today's date" type="date" class="mealDate form-control placeholder-visible-xs" value="{{todaysISODate}}" required='required'/>
     </div>
     <div class="form-group submit">
       <button class="btn" type="submit">Add</button>
