--- a/client/common.html
+++ b/client/common.html
@@ -3,7 +3,7 @@
     <a href="/" class="logo">
       {{> svg "jailmake-logo"}}
     </a>
-    <a href="#" class="btn menu-toggle visible-xs-inline-block">
+    <a href="#" class="menu-toggle visible-xs-inline-block">
       {{> svg "burger-menu"}}
     </a>
     <nav>
