--- a/client/home/home.html
+++ b/client/home/home.html
@@ -1,5 +1,5 @@
 <template name="home">
-  <h1 class="welcome hidden-xs">{{> today}}</h1>
+<!--   <h1 class="welcome hidden-xs">{{> today}}</h1> --> 
   {{> deck}}
   {{> rye }}
 </template>
@@ -48,8 +48,8 @@
       {{/if}}
       {{#if currentUser}}
         <div class="card-buttons">
-          <a class="btn btn-edit-user" href="/editperson/{{ _id }}">Edit</a>
           <a class="btn btn-make-chef" href="/addmeal?chef={{ _id }}">Cook</a>
+          <a class="btn btn-edit-user" href="/editperson/{{ _id }}">Edit</a>
           {{#if equal status 'jail'}}
             <a class="btn btn-on-the-rye" href="#">On the Rye</a>
           {{else}}
