--- a/client/layout.html
+++ b/client/layout.html
@@ -1,3 +1,11 @@
+<head>
+  <script>
+    UPLOADCARE_PUBLIC_KEY = '15127b47da228b9b2d87'
+  </script>
+  <title>Makelunch</title>
+  <meta name="viewport" content="initial-scale=1">
+</head>
+
 <template name="layout">
   {{> svgdefs }}
   {{> header }}
