--- a/client/editperson/editperson.html
+++ b/client/editperson/editperson.html
@@ -17,15 +17,17 @@
       <input class="form-control placeholder-visible-xs mobile" type="text" placeholder="Mobile number" value="{{ mobile }}" />
     </div>
 
-    <div class="editimg">
-      <img src="{{ img }}" />
+    <div class="form-group">
+      <label class="hidden-xs">Picture</label>
+      <input type="hidden" name="picture" role="uploadcare-uploader" data-crop />
+      <input type="hidden" id="uploadcare-uuid" name="uploadcare-uuid" />
     </div>
 
     <div class="form-group">
       <label class="hidden-xs">Photo url</label>
       <input class="form-control placeholder-visible-xs personImg" type="url" placeholder="Photo URL" value="{{ img }}" />
     </div>
-    <div class="form-group">
+    <div class="form-group submit">
       <button class="btn" type="submit">Save</button>
     </div>
   </form>
