--- a/client/editmeal/editmeal.html
+++ b/client/editmeal/editmeal.html
@@ -43,6 +43,7 @@
       <input placeholder="Today's date" type="date" class="mealDate form-control placeholder-visible-xs" value="{{meal.date}}" required='required'/>
     </div>
     <div class="form-group submit">
+      <button class="btn delete">Bin this meal</button>
       <button class="btn" type="submit">Save</button>
     </div>
   </form>
