check chef has been appointed before allowing meal to be edited.  fixes #2

--- a/client/editmeal/editmeal.html
+++ b/client/editmeal/editmeal.html
@@ -42,6 +42,11 @@
       <label class="hidden-xs">Date?</label>
       <input placeholder="Today's date" type="date" class="mealDate form-control placeholder-visible-xs" value="{{meal.date}}" required='required'/>
     </div>
+    {{#if error}}
+      <div class="alert">
+        {{error}}
+      </div>
+    {{/if}}
     <div class="form-group submit">
       <a class="btn delete" href="#">Bin this meal</a>
       <button class="btn" type="submit">Save</button>
