added default 0 to guests box and changed text to make it clear it expects a number.  fixes #9

--- a/client/addmeal/addmeal.html
+++ b/client/addmeal/addmeal.html
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group guests">
       <label class="hidden-xs">Any guests?</label>
-      <input placeholder="Number of guests" type="number" min="0" step="1" class="mealGuests form-control placeholder-visible-xs"/>
+      <input placeholder="Number of guests" value="0" type="number" min="0" step="1" class="mealGuests form-control placeholder-visible-xs"/>
     </div>
     <div class="form-group date">
       <label class="hidden-xs">Date?</label>
