--- a/client/addmeal/addmeal.html
+++ b/client/addmeal/addmeal.html
@@ -17,7 +17,7 @@
       <input placeholder="What's for lunch?" type="text" class="mealDish form-control placeholder-visible-xs" required='required'>
     </div>
     <div class="form-group guests">
-      <label class="hidden-xs">Any guests?</label>
+      <label class="hidden-xs">Number of guests?</label>
       <input placeholder="Number of guests" value="0" type="number" min="0" step="1" class="mealGuests form-control placeholder-visible-xs"/>
     </div>
     <div class="form-group date">
