adds svgs for chef and eater and uses these rather than emojis

--- a/client/editmeal/editmeal.html
+++ b/client/editmeal/editmeal.html
@@ -7,7 +7,10 @@
           <div class="label-top">
             <span>{{name}}</span>
           </div>
-          <div class="eater-status"></div>
+          <div class="eater-status">
+            {{> svg "chef"}}
+            {{> svg "knife-fork"}}
+          </div>
           {{> photoFrame this}}
         </div>
       {{/each}}
@@ -16,7 +19,10 @@
           <div class="label-top">
             <span>{{name}}</span>
           </div>
-          <div class="eater-status"></div>
+          <div class="eater-status">
+            {{> svg "chef"}}
+            {{> svg "knife-fork"}}          
+          </div>
           {{> photoFrame this}}
         </div>
       {{/each}}
@@ -25,7 +31,10 @@
           <div class="label-top">
             <span>{{name}}</span>
           </div>
-          <div class="eater-status"></div>
+          <div class="eater-status">
+            {{> svg "chef"}}
+            {{> svg "knife-fork"}}
+          </div>
           {{> photoFrame this}}
         </div>
       {{/each}}
