--- a/client/addmeal/addmeal.html
+++ b/client/addmeal/addmeal.html
@@ -7,7 +7,10 @@
           <div class="label-top">
             <span>{{name}}</span>
           </div>
-          <div class="eater-status"></div>
+          <div class="eater-status">
+            {{> svg "chef"}}
+            {{> svg "knife-fork"}}
+          </div>
           {{> photoFrame this}}
         </div>
       {{/each}}
