Adds responsive width detector divs;
Meals visibility only toggled at mobile width;
Meals visibility is reset when resizing back up to SM width

--- a/client/layout.html
+++ b/client/layout.html
@@ -12,4 +12,8 @@
   <div class="container">
     {{> yield}}
   </div>
+  <div id="responsive-detect-xs"></div>
+  <div id="responsive-detect-sm"></div>
+  <div id="responsive-detect-md"></div>
+  <div id="responsive-detect-lg"></div>
 </template>
