--- a/client/home/home.html
+++ b/client/home/home.html
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="deck drop">
       {{#each eaters}}
-        {{> card }}
+        {{> card eater=this}}
       {{/each}}
     </div>
   </div>
@@ -21,9 +21,9 @@
   {{#if mia}}
   <div class="row">
     <div class="rye drop">
-      <h1>On the Rye</h1>
+      <h1>Out of Action</h1>
       {{#each mia}}
-        {{> card }}
+        {{> card basic=true eater=this}}
       {{/each}}
     </div>
   </div>
@@ -31,7 +31,8 @@
 </template>
 
 <template name="card">
-  <div class="card{{#if eating}} eating{{/if}} {{scoreSummary this}}" data-person-id="{{_id}}">
+  {{#with eater}}
+  <div class="card{{#if eating}} eating{{/if}} {{scoreSummary this}} {{#if ../basic}}basic{{/if}}" data-person-id="{{_id}}">
     <div class="label-top">
       {{name}}
       <span class="score">{{ score this }}</span>
@@ -47,7 +48,9 @@
       {{/if}}
       {{#if currentUser}}
         <div class="card-buttons">
-          <a class="btn btn-make-chef" href="/addmeal?chef={{ _id }}">Cook</a>
+          {{#unless ../basic}}
+            <a class="btn btn-make-chef" href="/addmeal?chef={{ _id }}">Cook</a>
+          {{/unless}}
           <a class="btn btn-edit-user" href="/editperson/{{ _id }}">Edit</a>
           {{#if equal status 'jail'}}
             <a class="btn btn-on-the-rye" href="#">On the Rye</a>
@@ -58,4 +61,5 @@
       {{/if}}
     </div>
   </div>
+  {{/with}}
 </template>
