Changed button text

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -53,9 +53,9 @@
           {{/unless}}
           <a class="btn btn-edit-user" href="/editperson/{{ _id }}">Edit</a>
           {{#if equal status 'jail'}}
-            <a class="btn btn-on-the-rye" href="#">On the Rye</a>
+            <a class="btn btn-on-the-rye" href="#">Out of action</a>
           {{else}}
-            <a class="btn btn-on-the-rye" href="#">Off the Rye</a>
+            <a class="btn btn-on-the-rye" href="#">Back in action</a>
           {{/if}}
         </div>
       {{/if}}
