Changed button text

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -21,7 +21,7 @@
   {{#if mia}}
   <div class="row">
     <div class="rye drop">
-      <h1>Out of Action</h1>
+      <h1>Out of action</h1>
       {{#each mia}}
         {{> card basic=true eater=this}}
       {{/each}}
