--- a/client/eater/eater.html
+++ b/client/eater/eater.html
@@ -14,12 +14,16 @@
     <p title="{{lastEaten}}">Last ate {{fromNow lastEaten}}</p>
   {{/if}}
   {{#if currentUser}}
-    <a class="btn btn-make-chef" href="/addmeal?chef={{ _id }}">Cook</a>
-    <a class="btn btn-edit-user" href="/editperson/{{ _id }}">Edit</a>
-    {{#if equal status 'jail'}}
-      <a class="btn btn-on-the-rye" href="#">Out of action</a>
-    {{else}}
-      <a class="btn btn-on-the-rye" href="#">Back in action</a>
-    {{/if}}
+    <div class="eater-buttons">
+      {{#if equal status 'jail'}}
+        <a class="btn btn-make-chef" href="/addmeal?chef={{ _id }}">Cook</a>
+      {{/if}}
+      <a class="btn btn-edit-user" href="/editperson/{{ _id }}">Edit</a>
+      {{#if equal status 'jail'}}
+        <a class="btn btn-on-the-rye" href="#">Out of action</a>
+      {{else}}
+        <a class="btn btn-on-the-rye" href="#">Back in action</a>
+      {{/if}}
+    </div>
   {{/if}}
 </template>
