Tightened spacing on eater page

--- a/client/eater/eater.html
+++ b/client/eater/eater.html
@@ -5,8 +5,8 @@
   {{else}}
     <img class="eater-pic" src="{{monster}}">
   {{/if}}
-  <h2>Ratio</h2>
-  <p class="ratio">{{servings.given}} served : {{servings.received}} eaten</p>
+  <p class="ratio">{{servings.given}} served</p>
+  <p class="ratio">{{servings.received}} eaten</p>
   {{#if lastCooked}}
     <p class="last-cooked">Last cooked {{fromNow lastCooked}}</p>
   {{/if}}
