--- a/client/layout.html
+++ b/client/layout.html
@@ -9,7 +9,7 @@
 <template name="layout">
   {{> svgdefs }}
   {{> header }}
-  <div class="container">
+  <div id="content" class="container">
     {{> yield}}
   </div>
   <div id="responsive-detect-xs"></div>
