Added title to header

--- a/client/common.html
+++ b/client/common.html
@@ -4,6 +4,7 @@
       <a href="/" class="logo">
         {{> svg "logo"}}
       </a>
+      <h1>Makelunch</h1>
       <a href="#" class="menu-toggle visible-xs-inline-block">
         {{> svg "burger-menu"}}
       </a>
