Made text in inputs black;
Wired up one-the-rye button on eater page, which works but is not reactive

--- a/client/eater/eater.html
+++ b/client/eater/eater.html
@@ -25,9 +25,9 @@
       {{/if}}
       <a class="btn btn-edit-user" href="/editperson/{{ _id }}">Edit</a>
       {{#if equal ../status 'jail'}}
-        <a class="btn btn-on-the-rye" href="#">Out of action</a>
+        <a class="btn btn-on-the-rye" data-eater={{ _id }} href="#">Out of action</a>
       {{else}}
-        <a class="btn btn-on-the-rye" href="#">Back in action</a>
+        <a class="btn btn-on-the-rye" data-eater={{ _id }} href="#">Back in action</a>
       {{/if}}
     </div>
   {{/if}}
