--- a/client/addmeal/addmeal.html
+++ b/client/addmeal/addmeal.html
@@ -3,7 +3,7 @@
     <h1>Who's eating?</h1>
     <div class="mealEaters">
       {{#each people}}
-        <div class="card" data-person-id="{{_id}}">
+        <div class="card" data-eater="{{_id}}">
           <span class="name">{{name}}</span>
           {{#if uploadcare}}
             <img src="https://www.ucarecdn.com/{{uploadcare}}/-/scale_crop/768x768/center" />
