--- a/client/eater/eater.html
+++ b/client/eater/eater.html
@@ -20,11 +20,11 @@
   </div>
   {{#if currentUser}}
     <div class="eater-buttons">
-      {{#if equal ../status 'jail'}}
+      {{#if equal ./status 'jail'}}
         <a class="btn btn-make-chef" href="/addmeal?chef={{ _id }}">Cook</a>
       {{/if}}
       <a class="btn btn-edit-user" href="/editperson/{{ _id }}">Edit</a>
-      {{#if equal ../status 'jail'}}
+      {{#if equal ./status 'jail'}}
         <a class="btn btn-on-the-rye" data-eater={{ _id }} href="#">Out of action</a>
       {{else}}
         <a class="btn btn-on-the-rye" data-eater={{ _id }} href="#">Back in action</a>
