Remove unused assets. Tweak eater layout.

--- a/client/eater/eater.html
+++ b/client/eater/eater.html
@@ -6,9 +6,9 @@
     </div>
   </div>
   <div class="stats">
-    <p>Lunches made......<strong>{{servings.given}}</strong></p>
-    <p>Lunches eaten.....<strong>{{servings.received}}</strong></p>
-    <p>Balance...........<strong>{{score this}}</strong></p>
+    <p>Lunches made.....<strong>{{servings.given}}</strong></p>
+    <p>Lunches eaten....<strong>{{servings.received}}</strong></p>
+    <p>Balance..........<strong>{{score this}}</strong></p>
     <p class="flourish">
       {{> svg "logo-table"}}
     </p>
