--- a/client/editperson/editperson.html
+++ b/client/editperson/editperson.html
@@ -6,12 +6,12 @@
       <label class="hidden-xs">Name</label>
       <input class="form-control placeholder-visible-xs personName" type="text" placeholder="Name" value="{{ name }}" required />
     </div>
-    
+
     <div class="form-group">
       <label class="hidden-xs">Twitter Handle</label>
       <input class="form-control placeholder-visible-xs twitterHandle" type="text" placeholder="Twitter handle" value="{{ auth.twitter }}" />
     </div>
-    
+
     <div class="form-group">
       <label class="hidden-xs">Phone Number</label>
       <input class="form-control placeholder-visible-xs mobile" type="text" placeholder="Mobile number" value="{{ mobile }}" />
@@ -19,14 +19,10 @@
 
     <div class="form-group">
       <label class="hidden-xs">Picture</label>
-      <input type="hidden" name="picture" role="uploadcare-uploader" data-crop />
+      <input type="hidden" name="picture" role="uploadcare-uploader" data-crop data-public-key="{{uploadcarePublicKey}}"/>
       <input type="hidden" id="uploadcare-uuid" name="uploadcare-uuid" />
     </div>
 
-    <div class="form-group">
-      <label class="hidden-xs">Photo url</label>
-      <input class="form-control placeholder-visible-xs personImg" type="url" placeholder="Photo URL" value="{{ img }}" />
-    </div>
     <div class="form-group submit">
       <button class="btn" type="submit">Save</button>
     </div>
